force-app/main/default/objects/User_MyLearning_Program__c/User_MyLearning_Program__c.object-meta.xml
<CustomObject>
    <label>User MyLearning Program</label>
    <nameField>
        <displayFormat>UML-{00000000}</displayFormat>
        <label>User MyLearning Program ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User MyLearning Programs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>