force-app/main/default/objects/User_MyLearning_Program__c/fields/Alternate_ML_Supervisor__c.field-meta.xml
<CustomField>
    <fullName>Alternate_ML_Supervisor__c</fullName>
    <formula>User_Entry__r.Alternate_ML_Supervisor__r.FirstName + &apos; &apos; + User_Entry__r.Alternate_ML_Supervisor__r.LastName</formula>
    <label>Alternate ML Supervisor</label>
    <type>Text</type>
</CustomField>