force-app/main/default/objects/User_MyLearning_Program__c/fields/Is_Locked__c.field-meta.xml
<CustomField>
    <fullName>Is_Locked__c</fullName>
    <formula>User_Entry__r.Is_Locked__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Locked</label>
    <type>Checkbox</type>
</CustomField>