force-app/main/default/objects/User_MyLearning_Program__c/fields/MyLearning_Program__c.field-meta.xml
<CustomField>
    <fullName>MyLearning_Program__c</fullName>
    <label>MyLearning Program</label>
    <referenceTo>MyLearning_Program__c</referenceTo>
    <relationshipLabel>User MyLearning Programs</relationshipLabel>
    <relationshipName>User_MyLearning_Programs</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>