force-app/main/default/objects/User_MyLearning_Program__c/fields/Status_Icon__c.field-meta.xml
<CustomField>
    <fullName>Status_Icon__c</fullName>
    <formula>CASE(TEXT(Status__c), 
  &apos;Assign&apos;, IMAGE( &quot;/resource/uma_icons/Assign.svg&quot;, TEXT(Status__c), 23, 23) &amp; &apos; &apos; &amp; $Label.ToBeAssigned, 
  &apos;Assigned&apos;, IMAGE( &quot;/resource/uma_icons/Assigned.svg&quot;, TEXT(Status__c), 23, 23) &amp; &apos; &apos; &amp; TEXT(Status__c),
  &apos;Remove&apos;, IMAGE( &quot;/resource/uma_icons/Remove.svg&quot;, TEXT(Status__c), 23, 23) &amp; &apos; &apos; &amp; $Label.ToBeRemoved,
  &apos;Error&apos;, IMAGE( &quot;/resource/uma_icons/Error.svg&quot;, TEXT(Status__c), 23, 23) &amp; &apos; &apos; &amp; TEXT(Status__c),
  &apos;&apos;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status</label>
    <type>Text</type>
</CustomField>