force-app/main/default/objects/User_MyLearning_Program__c/fields/User_Entry__c.field-meta.xml
<CustomField>
    <fullName>User_Entry__c</fullName>
    <label>User Entry</label>
    <referenceTo>User_Entry__c</referenceTo>
    <relationshipLabel>User MyLearning Programs</relationshipLabel>
    <relationshipName>User_MyLearning_Programs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>